# python-http-runtime

./: .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  DESIGN.md  MILESTONES.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: API-Reference.md  Architecture-Overview.md  Configuration.md  Design-Decisions.md  Folder-Structure.md  Quick-Start.md  Roadmap.md  Usage-Examples.md
docs/adr/: README.md
docs/api/: README.md
examples/: README.md
examples/basic/: README.md
src/python_http_runtime/: __init__.py  auth.py  errors.py  middleware.py  policies.py  request.py  response.py  runtime.py  settings.py  testing.py  transport.py
tests/: __init__.py  test_auth.py  test_errors.py  test_mock_transport.py  test_policies.py  test_repository_structure.py  test_request.py  test_response.py  test_runtime.py  test_settings.py  test_transport_contract.py
